# Flow-MBPO-PWM

./: .gitignore  .gitmodules  COMPLETE_SUBMISSION_NOV18.md  COMPLETE_TRAINING_SUMMARY_NOV18.md  COMPLETION_REPORT.md  CORRECTED_EVALUATION_RESULTS.md  CRITICAL_EVAL_BUG.md  EVALUATION_SUMMARY_ZH.md  EXPERIMENT_48M_MULTITASK_NOV18.md  EXPERIMENT_PLAN_NOV18.md  FINAL_RESULTS_CORRECTED.md  FLOW_RESUBMISSION_NOV18.md  PROJECT_STATUS.md  QUICK_REF_NOV18.md  README.md  TRAINING_RESULTS_NOV18.md  TRAINING_STATUS_NOV18.md  TRAINING_STATUS_QUICK.md  TRAINING_SUBMISSION_SUMMARY_NOV18.md  TRAINING_VISUALIZATION_CORRECTED.md  environment.yaml  mt30_results_summary.csv  pyproject.toml  requirements-flowmbpo.txt  requirements.txt  實驗訓練狀況總結_20241119.md  訓練狀態總結_20241118.md  訓練結果總結_簡版.md
docs/: BUG_FIXES.md  CHECKLIST.md  FIXED_USAGE.md  FLOW_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PACE_USAGE_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README_FLOW.md  ROOT_CAUSE_ANALYSIS.md  TODO.md  WANDB_QUICKSTART.md  WANDB_SETUP.md  baseline_comparison.md  bug_fixes_checkpoint_strategy.md  bug_fixes_summary_zh.md  experiment_log.md  flow-dynamics-comparison-guide.md  flow-world-model-plan.md  master_plan.md  progress_log.md  project_setup_and_workflow.md  training_results_and_evaluation.md  training_status_nov20.md
eval_results/: final_eval_results.csv
frank/: __init__.py  batched_tdmpc2.py  batched_trainer.py  dmcontrol_pwm_adapter.py  episode_tracker.py  pwm_env_adapter.py
hf_pwm_repo/: README.md
results/: all_experiments.csv  phase5_flow_tuning.csv  phase6_epoch_sweep.csv  (+1 more)
(+195 files in other folders)
